Fixes styling issue in post item on firefox Adds anchor tag to post item text so you can right click and open new tab on the title of a post

--- a/web/app/components/common/post-list/post-item.css
+++ b/web/app/components/common/post-list/post-item.css
@@ -37,3 +37,7 @@
     height: 100%;
     margin-right: 10px;
 }
+
+.title > a {
+    color: initial;
+}
